# ServerTgHome

./: .dockerignore  .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_app_state.py  0003_sensor_readings.py  0004_audio_messages.py
config/: config.example.yaml  go2rtc.example.yaml
scripts/: backup.sh  deploy.sh  restore.sh  retention-once.sh
server_tg_home/: cli.py
server_tg_home/api/: app.py
server_tg_home/audio/: __init__.py  service.py
server_tg_home/core/: config.py  runtime_state.py  sensor_analytics.py  status.py  temperatures.py
server_tg_home/database/: migrations.py  models.py  session.py
server_tg_home/graphs/: renderer.py
server_tg_home/integrations/: home_assistant.py
server_tg_home/jobs/: audio_tasks.py  dramatiq_setup.py  factory.py  graph_tasks.py  processor.py  queue.py  repository.py  tasks.py
server_tg_home/media/: camera_health.py  recorder.py  storage.py
server_tg_home/telegram/: client.py  panels.py  polling.py
server_tg_home/workers/: buffer.py  retention.py
